@@ -1,3 +1,8 @@
+2006-03-09  Eric Anholt  <anholt@FreeBSD.org>
+
+	* src/mouse.c: (MouseCommonOptions):
+	Coverity #875: Correct several memory leaks in options parsing.
+
 2006-02-28  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
